Web3 - transaction listener - add withdraw function

--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fund Me DApp</title>
     <script src="./app.js" type="module"></script>
-</head>
-<body>
+  </head>
+  <body>
     <button id="connectButton">Connect</button>
+    <label>
+      Eth Amount
+      <input id="ethAmount" />
+    </label>
     <button id="fundButton">Fund</button>
-</body>
+    <button id="getBalance">Get Contract Balance</button>
+    <button id="withdrawButton">Withdraw Button</button>
+  </body>
 </html>
